--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 <dependency>
     <groupId>io.qameta.allure</groupId>
     <artifactId>allure-junit5</artifactId>
-    <version>2.13.0</version>
+    <version>2.13.1</version>
     <scope>test</scope>
 </dependency>
 <dependency>
@@ -87,9 +87,7 @@
         <version>2.10.0</version>
         <configuration>
             <reportVersion>${allure.version}</reportVersion>
-            <allureDownloadUrl>
-                ${allure.cmd.download.url}/${allure.version}/allure-commandline-${allure.version}.zip
-            </allureDownloadUrl>
+            <allureDownloadUrl>https://repo.maven.apache.org/maven2/io/qameta/allure/allure-commandline/${allure.version}/allure-commandline-${allure.version}.zip</allureDownloadUrl>
         </configuration>
     </plugin>
     <plugin>
